# abacus

./: README.md  contributors.yml  sigrid.yaml
.github/workflows/: build-lint-test.yml  cla.yml  codecov.yml  codeql.yml  pdf-diff-comment.yml  pdf-diff.yml  release.yml  sigrid-pr-feedback.yml  sigrid-publish.yml  sigrid-pullrequest.yml
.github/workflows/scripts/: pdf-diff.js
backend/: Cargo.toml  openapi.json
backend/.github/workflows/: build-lint-test.yml
backend/fuzz/: Cargo.toml  apportionment.py
backend/fuzz/fuzz_targets/: anonymity.rs  apportionment.rs  differential_marc.rs  differential_osv2020.rs  differential_python.rs  fractions.rs  house_monotonicity.rs  population_monotonicity.rs
backend/fuzz/src/: election_summary.rs  lib.rs
backend/src/: lib.rs
backend/src/apportionment/: mod.rs  seat_assignment.rs
backend/src/data_entry/: structs.rs
backend/src/investigation/: api.rs
backend/templates/: model-n-10-2.typ
frontend/: package-lock.json  package.json  playwright.d2d.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/app/component/form/data_entry/: PollingStationFormController.tsx  PollingStationFormNavigation.test.tsx  PollingStationFormNavigation.tsx  PollingStationProgress.tsx  utils.ts
frontend/app/component/form/data_entry/check_and_save/: CheckAndSaveForm.tsx
frontend/app/module/data_entry/polling_station/: PollingStationLayout.tsx
